Shenandoah build fails without JFR after JDK-8255036

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • gc
    • b22

      # Reproduce
      ```
      bash configure --with-jvm-variants=server --with-debug-level=fastdebug --with-jvm-features=-jfr
      ```

      # Symptom
      ```
      /home/jvm/jiefu/open/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/shenandoahRootVerifier.o: In function `ShenandoahGCStateResetter::ShenandoahGCStateResetter()':
      shenandoahRootVerifier.cpp:(.text+0x17): undefined reference to `ShenandoahHeap::heap()'
      shenandoahRootVerifier.cpp:(.text+0x27): undefined reference to `ShenandoahHeap::heap()'
      shenandoahRootVerifier.cpp:(.text+0x2f): undefined reference to `ShenandoahHeap::is_concurrent_weak_root_in_progress() const'
      /home/jvm/jiefu/open/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/shenandoahRootVerifier.o: In function `ShenandoahGCStateResetter::~ShenandoahGCStateResetter()':
      shenandoahRootVerifier.cpp:(.text+0x5b): undefined reference to `ShenandoahHeap::heap()'
      /home/jvm/jiefu/open/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/shenandoahRootVerifier.o: In function `ShenandoahRootVerifier::oops_do(OopClosure*)':
      shenandoahRootVerifier.cpp:(.text+0x1a6): undefined reference to `ShenandoahHeap::heap()'
      shenandoahRootVerifier.cpp:(.text+0x1b6): undefined reference to `ShenandoahHeap::heap()'
      shenandoahRootVerifier.cpp:(.text+0x1be): undefined reference to `ShenandoahHeap::is_concurrent_weak_root_in_progress() const'
      /home/jvm/jiefu/open/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/shenandoahRootVerifier.o: In function `ShenandoahRootVerifier::roots_do(OopClosure*)':
      shenandoahRootVerifier.cpp:(.text+0x1083): undefined reference to `ShenandoahHeap::heap()'
      shenandoahRootVerifier.cpp:(.text+0x1093): undefined reference to `ShenandoahHeap::heap()'
      shenandoahRootVerifier.cpp:(.text+0x109b): undefined reference to `ShenandoahHeap::is_concurrent_weak_root_in_progress() const'
      /home/jvm/jiefu/open/jdk/build/linux-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/shenandoahRootVerifier.o: In function `ShenandoahRootVerifier::strong_roots_do(OopClosure*)':
      ```

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: