8255213: Shenandoah build fails without JFR after JDK-8255036